tests/golden/type_errors/namespace_import_assign_alias.cd
import "../namespace_import_value/lib.cd" as lib;
lib = 1;
